--- a/sesame-rio-extensions-rdfjson/pom.xml
+++ b/sesame-rio-extensions-rdfjson/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!-- Copyright 2012 Peter Ansell -->
+    <!-- Copyright 2012-2013 Peter Ansell -->
     <!-- Licensed under the Apache License, Version 2.0 (the "License"); -->
     <!-- you may not use this file except in compliance with the License. -->
     <!-- You may obtain a copy of the License at -->
