--- a/sesame-rio-extensions-api/pom.xml
+++ b/sesame-rio-extensions-api/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <!-- Copyright 2012-2013 Peter Ansell -->
     <!-- Licensed under the Apache License, Version 2.0 (the "License"); -->
     <!-- you may not use this file except in compliance with the License. -->
@@ -17,7 +16,7 @@
     <parent>
         <groupId>com.github.ansell.sesame-rio-extensions</groupId>
         <artifactId>sesame-rio-extensions-parent</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
     <artifactId>sesame-rio-extensions-api</artifactId>
     <name>Sesame Rio Extensions API</name>
