--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
                 <artifactId>junit</artifactId>
                 <version>4.11</version>
             </dependency>
+            <dependency>
+            	<groupId>com.fasterxml.jackson.core</groupId>
+            	<artifactId>jackson-core</artifactId>
+            	<version>2.1.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
