--- a/sesame-rio-extensions-rdfjson/pom.xml
+++ b/sesame-rio-extensions-rdfjson/pom.xml
@@ -83,6 +83,10 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
+			<artifactId>sesame-rio-rdfjson</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
