--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
     <!-- Specify the encoding of the source files. -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sesame.version>2.7.0-beta3-SNAPSHOT</sesame.version>
+        <sesame.version>2.7.1-SNAPSHOT</sesame.version>
     </properties>
 
     <prerequisites>
