--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <!-- or have additional Copyright notices that must be displayed. -->
     <licenses>
         <license>
-            <name>Apache-2.0 License</name>
+            <name>Apache License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0</url>
             <distribution>repo</distribution>
         </license>
@@ -64,7 +64,7 @@
     <!-- Specify the encoding of the source files. -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sesame.version>2.7.1-SNAPSHOT</sesame.version>
+        <sesame.version>2.7.1</sesame.version>
     </properties>
 
     <prerequisites>
@@ -97,26 +97,18 @@
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>1.2.17</version>
+		<scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.2</version>
+                <version>1.7.5</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.2</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>2.4</version>
-            </dependency>
-            <dependency>
-                <groupId>org.json</groupId>
-                <artifactId>json</artifactId>
-                <version>20090211</version>
+                <version>1.7.5</version>
+		<scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.kohsuke.metainf-services</groupId>
@@ -127,11 +119,7 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.11</version>
-            </dependency>
-            <dependency>
-            	<groupId>com.fasterxml.jackson.core</groupId>
-            	<artifactId>jackson-core</artifactId>
-            	<version>2.1.4</version>
+		<scope>test</scope>
             </dependency>
             <dependency>
             	<groupId>org.openrdf.sesame</groupId>
@@ -227,12 +215,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12.4</version>
+                    <version>2.14.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.12.4</version>
+                    <version>2.14.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
